--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <img class="headerImg" src="./Images/slide6.jpg" width="30%" height="100%"> 
             </section>
-        
+            <hr class="hr">
             <section class="classes outerSections" id="classes"><!--Classes - styles of dance-->
                 <h2 class="header2">Classes</h2>
                 <section class="wrapClasses">
@@ -76,6 +76,7 @@
                     </article>
                 </section>
             </section>
+            <hr class="hr">
             <section class="timetable outerSections" id="timetable"><!--Timetable--> 
                 <h2 class="header2">Timetable</h2>
                 <section class="table">
@@ -134,6 +135,7 @@
                     </table>
                 </section>
             </section>
+            <hr class="hr">
             <section class="gallery outerSections" id="gallery"><!--Videos and images display-->
                 <h2 class="header2">Gallery</h2>
             <section class="innerSlides">
@@ -174,6 +176,7 @@
                     </div>
                 </section>
             </section>
+            <hr class="hr">
             </section>
             <section class="progression outerSections" id="progress"><!--Progression from beginner to advanced, certficates, awards, performances, exams-->
                 <h2 class="header2">Progression</h2>
@@ -200,6 +203,7 @@
                     </section> 
                 </section>
             </section>
+            <hr class="hr">
             <section class="contact outerSections" id="contact"> <!--Contact-->
                 <h2 class="header2">Contact</h2> 
                 <div class="wrapContact">
