--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p class="centerIntroText">Welcome to the studio - the hub for creativity and freedom. Come and explore our classes, 
                         dance styles, timetable, performances and more. <br/><br/> We cater for all levels, ages and abilities, so join us now!
                     <br/><br/></p>
-                    <a href="#contact" class="contactButton"> Find out more!</a>
+                    <a href="#about" class="contactButton"> Find out more!</a>
                 </div>
                 <img class="headerImg" src="./Images/slide6.jpg" width="30%" height="100%"> 
             </section>
@@ -208,16 +208,17 @@
                 <h2 class="header2">Contact</h2> 
                 <div class="wrapContact">
                     <div class="wrapDetails">
-                        <p class="details"><strong>Address: </strong>123 Dan Street<br/>London <br> NW5 PSA</p>
-                        <p class="details"><strong>Number:</strong> 07955566612</p>
-                        <p class="details"><strong>Email:</strong> Dan@street.com</p><br/>
+                        <p class="details"><i class="fas fa-map-marker-alt contactDetailsIcons"></i><br/><strong>Address: </strong>123 Dan Street<br/>London <br> NW5 PSA</p>
+                        <p class="details"><i class="fas fa-phone-alt contactDetailsIcons"></i><br/><strong>Number:</strong> 07955566612</p>
+                        <p class="details"><i class="fas fa-at contactDetailsIcons"></i><br/><strong>Email:</strong> Dan@street.com</p><br/>
                     </div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2suk!4v1626294816356!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </section>
         </main>
+        <section class="decoration"></section>
         <footer>
-            <section class="socials outerSections">
+            <section class="socials">
                 <a class="Twitter" href="#"><img src="./Images/Socials/twitter1.png" alt="Twitter icon"/></a>
                 <a class="Instagram" href="#"><img src="./Images/Socials/instagram1.png" alt="Instagram icon"/></a>
                 <a class="Facebook" href="#"><img src="./Images/Socials/facebook1.png" alt="Facebook icon"/></a>
